Remove use of boxed number constructors for Java 9